# cardinal-boa

./: README.md  pyproject.toml
cardinalboa/: manage.py  package-lock.json  package.json  tailwind.config.js
cardinalboa/cardinalboa/: asgi.py  settings.py  urls.py  wsgi.py
cardinalboa/static/src/: styles.css
cardinalboa/templates/: base.html  index.html
cardinalboa/users/templates/users/: index.html
