[tool.poetry]
name = "cardinalboa"
version = "0.1.0"
description = "Inventory Management System as a Service"
authors = ["Yuvi <yuvarajselva@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
